--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <meta property="og:type" content="epic website">
 <meta property="og:title" content="epic title" />
-<meta property="og:description" content="epic desc" />
-<meta property="og:url" content="https://robloxspoof.github.io/reposit"" />
+<meta property="og:description" content="unepic desc" />
+<meta property="og:url" content="https://robloxspoof.github.io/reposit&quot;ls" />
 <meta property="og:image" content="https://cdn.vox-cdn.com/uploads/chorus_asset/file/10838101/omegalul.jpg.jpg" />
 </head>
 <body>
